# Rth

./: .Rbuildignore  .gitignore  .rbuildignore  DESCRIPTION  INSTALL  NAMESPACE  README  README.md  TODO  cleanup  configure  configure.ac  reconf
R/: Rth-package.r  dist.r  gini.r  hash.r  hash96.r  rand.r  rthcolsums.R  rthconv.R  rthdist.R  rthgini.r  rthhist.R  rthkendall.R  rthma.R  rthmean.r  rthnorm.r  rthorder.R  rthpdist.R  rthpearson.R  rthrnorm.r  rthrowsums.R  rthrunif.r  rthsort.R  rthtable.R  rthxpos.R  threads.r
demo/: 00Index  sort.R
inst/: CITATION
man/: 00-rth-package.Rd  10-nthreads.Rd  Rth-package.Rd  a_nthreads.Rd  aa_nthreads.Rd  rand.Rd  rth.nthreads.Rd  rthcolsums.Rd  rthdist.Rd  rthhist.Rd  rthma.Rd  rthorder.Rd  rthrnorm.Rd  rthrunif.Rd  rthsort.Rd  rthtable.Rd
src/: Makevars.in  Makevars.win  Rth.h  backend.h  dist.cpp  gini.cpp  hash.c  hash.h  hash96.c  rand.cpp  rand.h  rs.cpp  rthcolsums.cpp  rthconv.cpp  rthdist.cpp  rthgini.cpp  rthhist.cpp  rthkendall.cpp  rthma.cpp  rthmean.cpp  rthnorm.cpp  rthorder.cpp  rthpdist.cpp  rthpearson.cpp  rthrnorm.cpp  rthrowsums.cpp  rthrunif.cpp  rthsort.cpp  rthtable.cpp  rthxpos.cpp  rthxposnv.cpp  threads.cpp
test/: rthcolsums.r  rthconv.R  rthdist.r  rthgini.r  rthhist.R  rthkendall.R  rthorder.R  rthpearson.R  rthsort.R  rthtable.R
